--- a/muebles-industriales/src/App.css
+++ b/muebles-industriales/src/App.css
@@ -1,53 +1,90 @@
+/*#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.logo {
+  will-change: filter;
+  transition: filter 300ms;
+  color: azure;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}*/
+
 
 body{
-  background-color: #c6b08c;
+  background-color: black;
 }
 #Navbar{
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100vh;
-  
+  z-index: 1000;
 }
 
-.logo{
+#Navbar .logo{
   font-size: 2rem;
   font-weight: 100;
-  color: black;
-  padding-bottom: 80vh;
 }
-
-#navbar a {
-  color: #181713;
+#navbar a{
+  color: white;
+  text-transform: uppercase;
   font-weight: 400;
-  padding-left: 20px;
-  display: flex;
-  margin-left: 20px;
-  margin-top: -615px;
+  padding: 0 0 0 8vh;
+
 }
 
 #Navbar .container{
   display: flex;
   justify-content: space-between;
   align-items:center;
+  height: 100%;
+  padding-top:  20vh;
 }
 
 #navbar ul{
   display: flex;
   padding-left: 70vh;
-  color: black;
 }
 ul{
   list-style: none;
+  
 }
 
 .titulo{
-  h1 {
-    position: absolute;
-    top: 95px; 
-    left: 50%; 
-    transform: translateX(-50%); 
-}
-
+  align-items: center;
+  padding-left: 60vh;
+  text-transform: uppercase;
+  padding-top: 100px;
 }
 
 .parrafo-1{
