--- a/muebles-industriales/src/App.css
+++ b/muebles-industriales/src/App.css
@@ -48,10 +48,9 @@ img{
     max-width: 100%;
 }
 /*header{
-    background: url(../src/assets/img-fto.png);
+    background: url(../src/assets/IMG-.jpg);
     background-repeat: no-repeat;
-    height: 57vh;
-    
+    height: 100vh;
     align-items: center;
     display:block;
     background-size: cover;
@@ -72,7 +71,7 @@ img{
   position: fixed;
   top: 0;
   left: 0;
-  margin-top: 50px;
+  margin-top: 50vh;
 }
 #Navbar .CartWidget{
   display: flex;
