--- a/muebles-industriales/src/components/Home/Home.css
+++ b/muebles-industriales/src/components/Home/Home.css
@@ -26,13 +26,14 @@
     padding: 30px;
 }
 
-.Parrafo{
+.barra-parrafo{
     background-color: white;
     color: black;
     font-family: "Teachers", sans-serif;
     text-align: center;
-    padding: 20px;
+    padding-bottom: 30px;
     padding-top: 0 10px;
+    padding: 20px;
 }
 
 .footer{
@@ -75,3 +76,33 @@
 #about .flex-image {
 	flex: 1;
 }
+
+.row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.col{
+    background-color: white;
+    text-align: center;
+}
+
+.Parrafo{
+    background-color: white;
+    color:black;
+    font-family: "Teachers", sans-serif;
+    text-align: center;
+    align-items: center;
+    margin-top: 45vh;
+}
+
+.footer{
+        margin-top: auto;
+        box-shadow: 0 -3px 5px rgb(0, 0, 0, 0.104);
+        text-align: center;
+        padding: 30px;
+        background-color: #9f9fa8;
+}
+
+
+
